<resources>
    <string name="app_name">Quiz App</string>
    <string name="ma_welcome_text">Welcome to the Quiz App</string>
    <string name="ma_start_btn">Start</string>
    <string name="na_name_txt">Name</string>
    <string name="na_name_txt_hint">Enter your name</string>
    <string name="na_submit_btn_txt">Start Quiz</string>
    <string name="na_cancel_btn_txt">Cancel</string>

    <string name="qa_btn_next">Next</string>
    <string name="qa_btn_prev">Previous</string>


    <string-array name="questions">
        <item>Which of the following is not a programming language?,Java,PHP,Python,HTML,HTML</item>
        <item>Which of the following is not a RDBMS?,MySQL,Oracle,Postgres,MongoDB,MongoDB</item>
        <item>Which of the following is not an OS?,Windows,Linux,Casendra,Ubuntu,Casendra</item>
        <item>Which of the following language is supported in Android Studio?,Kotlin,PHP,Python,VB,Kotlin</item>
        <item>Which of the following is not a country?,Nepal,India,China,Paris,Paris</item>
    </string-array>

    <string name="sa_header">Quiz Result</string>
    <string name="sa_result_txt">YOUR SCORE</string>
    <string name="sa_btn_restart">Restart</string>
    <string name="sa_btn_finish">Finish</string>



</resources>